# nexus_automation_engine

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SHOWCASE.md  blueprint.md  docker-compose.yml
backend/: .coverage  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/contexts/: __init__.py
backend/app/contexts/automation_catalog/: __init__.py
backend/app/contexts/automation_catalog/api/: __init__.py  routes.py
backend/app/contexts/automation_catalog/application/: __init__.py  seed.py  service.py
backend/app/contexts/automation_catalog/domain/: __init__.py  models.py
backend/app/contexts/change_management/: __init__.py
backend/app/contexts/cmdb/: __init__.py
backend/app/contexts/compliance/: __init__.py
backend/app/contexts/connectors/: __init__.py
backend/app/contexts/determinism/: __init__.py
backend/app/contexts/execution_engine/: __init__.py
backend/app/contexts/gitops/: __init__.py
backend/app/contexts/identity_access/: __init__.py
backend/app/contexts/incident_management/: __init__.py
backend/app/contexts/lifecycle_validation/: __init__.py
backend/app/contexts/orchestration_canvas/: __init__.py
backend/app/contexts/review/: __init__.py
backend/app/contexts/scheduling/: __init__.py
backend/app/platform/: __init__.py  app_factory.py  config.py  database.py  docs.py  errors.py  health.py  security_middleware.py
backend/app/platform/theming/: __init__.py  routes.py  service.py  validation.py
backend/app/shared_kernel/: __init__.py  broker.py  errors.py  idempotency.py  ids.py  variable_pool.py
backend/tests/: conftest.py  test_database.py  test_docs_site.py  test_health.py  test_spa_fallback.py  test_theming.py  test_variable_pool.py
backend/tests/contexts/: test_approval_gate.py  test_canvas_engine.py  test_canvas_review.py  test_canvas_service.py  test_catalog.py  test_catalog_scale.py  test_change_classification.py  test_change_management.py  test_ci_change_approval.py  test_cmdb_api.py  test_cmdb_health.py  test_cmdb_lineage.py  test_cmdb_schema.py  test_compliance_eval.py  test_compliance_run.py  test_compliance_sweep.py  test_connectors_api.py  test_connectors_contract.py  test_connectors_simulation.py  test_determinism_api.py  test_execution_api.py  test_execution_service.py  test_git_repo.py  test_gitops_api.py  test_gitops_serializer.py  test_gitops_service.py  test_idempotency.py  test_identity_access.py  test_incident_seed.py  test_incidents.py  test_lifecycle_validation.py  test_node_specs.py  test_pinning_rules.py  test_plain_summary.py  test_reconciler.py  test_recovery.py  test_review_packet.py  test_scheduling.py  test_secret_safety.py  test_security_hardening.py  (+1 more)
(+264 files in other folders)
