[project]
name = "nexus-automation-engine"
version = "0.1.0"
description = "Vendor/platform-agnostic Automation Control Plane — backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0.36",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pyjwt>=2.9",
    "python-multipart>=0.0.12",
    "websockets>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "anyio>=4.6",
    "ruff>=0.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "S"]
ignore = [
    "B008",  # FastAPI Depends() in defaults is idiomatic
    "S105",  # "hardcoded password": dev-only default secret/passwords (local/test only)
    "S106",
    "S110",  # try/except/pass is used deliberately for WS disconnects
    "S311",  # stdlib random is fine for the simulation layer (not crypto)
    "S701",  # Jinja autoescape off is intentional: we render plaintext params, not HTML
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "S"]  # asserts + dev creds are expected in tests
